--- a/css/stylish-portfolio.css
+++ b/css/stylish-portfolio.css
@@ -19,6 +19,19 @@ body {
   font-weight: 700;
 }
 
+/* Top Menu */
+#top-menu-nav{
+  background: white;
+}
+
+.top-nav li{
+  display: inline-block;
+  float: left;
+  padding: 15px 10px;
+  font-weight: bold;
+}
+/* End Top Menu */
+
 /* Side Menu */
 
 #sidebar-wrapper {
